--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -2,6 +2,19 @@
 @tailwind components;
 @tailwind utilities;
 
+button{
+  @apply disabled:opacity-20
+}
+
 .btn{
-  @apply bg-palette-orange min-h-10 rounded-lg px-6 py-2 text-base font-bold tracking-wider text-white
+  @apply  min-h-10 rounded-lg px-6 py-2 text-base font-bold disabled:opacity-20 tracking-wider;
+  
+}
+
+.btn svg{
+  @apply w-6 h-6
+}
+
+.btn_orange{
+  @apply bg-palette-orange text-white
 }
